# indy-resolver

./: Build-Environment.md  Cargo.toml  appveyor.yml
libindyresolver/: .travis.yml  Cargo.toml  appveyor.yml
libindyresolver/include/: indy_resolver.h  indy_resolver_context.h  indy_resolver_did.h
libindyresolver/src/: lib.rs  mod.rs  pool.rs
libindyresolver/src/ffi/: macros.rs  mod.rs  pool_context.rs
libindyresolver/src/ledger/: ledger_command.rs
libindyresolver/src/pool/: pool.rs  pool_command.rs
